--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -1,7 +1,7 @@
 @import "~vue-material/dist/theme/engine"; // Import the theme engine
 
 @include md-register-theme("default", (
-  primary: #F8F2E3, // The primary color of your application
+  primary: #ffcf07, // The primary color of your application
   accent: #FB6359, // The accent or secondary color
 ));
 @include md-register-theme("ori", (
